import load factor res